# tlbx

./: .gitignore  CMakeLists.txt  README.md  queries.txt  tlbx.h  tlbx.hpp  tlbx.m
headers/: col.hpp  cppBridge.h  cpx.hpp  mth.hpp  str.hpp  trg.hpp
iOS_bridge/: CMakeLists.txt
iOS_bridge/headers/: ObjC_Interop.h  cppBridge.h
iOS_bridge/sources/: ObjC_Interop.mm
sources/: col.cpp  cpx.cpp  mth.cpp  str.cpp  trg.cpp
src/: tlbx.hpp
src/cpp/sources/: str.cpp
src/headers/: ObjC_Interop.h  col.hpp  str.hpp
src/sources/: ObjC_Interop.mm  col.cpp  str.cpp
test/: CMakeLists.txt  cpxTest.cpp
tlbx/: main.cpp  tlbx.hpp
tlbx.xcodeproj/: project.pbxproj
tlbx.xcodeproj/project.xcworkspace/xcuserdata/phil3.xcuserdatad/: UserInterfaceState.xcuserstate
tlbx.xcodeproj/xcshareddata/xcschemes/: tlbx_iOS_lib.xcscheme
tlbx.xcodeproj/xcuserdata/phil3.xcuserdatad/xcschemes/: xcschememanagement.plist
tlbx/headers/: mth.hpp  str.hpp
tlbx/sources/: col.cpp  str.cpp  trg.cpp
tlbx_iOS_app/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
tlbx_iOS_app/tlbx_iOS_app.xcdatamodeld/: .xccurrentversion
tlbx_iOS_lib/: tlbx_iOS_lib.h  tlbx_iOS_lib.mm
